# rocq-n-roll

./: Basics.v  Feedback.md  LICENSE  README.md  dune  dune-project  ideas-n-brainstorm.md  main.ml  synth.ml  test.v
proofs/: arm8_strspn_proof.v
rust_rocq/: .test.aux  Basics.v  Cargo.toml  bad_proof.v  coq_lsp_test.py  correct_proof.v  eautotest.v  info_auto_chord.v  lists.v  long_proof.v  performance.v  semicolon.v  test.glob  test.v  trysimpl.v
rust_rocq/src/: formatting.rs  gui.rs  lsp.rs  main.rs  main_midi.rs  main_vscoq.rs  main_vscoq_backup.rs  midi.rs  old-main.rs
vs/: README.md  package-lock.json  package.json  tsconfig.json
vs/otto-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.js.map
vs/otto-ui/src/: App.tsx  De.css  De.tsx
vs/src/: algo.ts  coqtop.ts  extension.ts  panel.ts  parse.ts  partial.ts  print.ts  syntax.ts  tree.ts
vs/src/script-parser/: Script.g4  Script.interp  ScriptLexer.interp  ScriptLexer.tokens  ScriptLexer.ts  ScriptListener.ts  ScriptParser.ts  ScriptVisitor.ts
vs/src/utilities/: getNonce.ts  getUri.ts
