[package]
name = "rust_rocq"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.94"  # LSP protocol definitions
lsp-server = "0.7"  # LSP server utilities
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
