[package]
name = "rust_rocq"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24"
egui = "0.24"  
rand = "0.8"
winit = "0.28"
lsp-types = "0.94"  # LSP protocol definitions
lsp-server = "0.7"  # LSP server utilities
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
portmidi = "0.3" 
regex = "1.0"
